feat: implement infrastructure approval workflow, change tracking, and standardized list view components